# simple-pwa-messenger

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md
.github/workflows/: ci.yml  terraform.yml
apps/pwa/: index.html  package.json  vite.config.ts
apps/pwa/public/: manifest.json  sw.js
apps/pwa/scripts/: build-wasm.sh
apps/pwa/src/: App.tsx  main.tsx
changes/implement-encrypted-messenger-architecture/: .openspec.yaml
crates/messenger-crypto/: Cargo.toml  build-wasm.sh
crates/messenger-crypto/src/: double_ratchet.rs  error.rs  identity.rs  keys.rs  lib.rs  session.rs  x3dh.rs
crates/messenger-crypto/tests/: integration_test.rs  ratchet_test.rs  x3dh_test.rs
docs/: e2e-validation.md  foundation-module-integration.md  runbooks.md  security-checklist.md
functions/: package.json
functions/src/: index.ts
functions/src/handlers/: auth.ts  chat.ts  keys.ts  push.ts
functions/src/middleware/: auth.ts
functions/src/utils/: firestore.ts  secrets.ts
functions/tests/: auth.test.ts  chat.test.ts  keys.test.ts  push.test.ts
infra/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
infra/environments/: dev.tfvars  prod.tfvars
infra/modules/cloud-functions/: main.tf  outputs.tf  variables.tf
infra/modules/firestore/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/identity-platform/: main.tf  (+2 more)
openspec/specs/: openapi.yaml
pipelines/ci/: build.yml  validate.yml
pipelines/scripts/: functions-validate.sh  pwa-validate.sh  rust-validate.sh  tf-validate.sh
(+21 files in other folders)
