[package]
name = "messenger-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
getrandom = { version = "0.2.16", features = ["js"] }
hmac = "0.12.1"
hkdf = "0.12.4"
js-sys = "0.3.82"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
sha2 = "0.10.9"
wasm-bindgen = "0.2.105"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.55"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
